@@ -144,6 +144,7 @@ Chronological list of authors
   - Siddharth Jain
   - Ameya Harmalkar
   - Shakul Pathak
+  - Andrea Rizzi
 
 External code
 -------------
