@@ -31,7 +31,8 @@ import os
 
 import MDAnalysis as mda
 
-from MDAnalysisTests.datafiles import AUX_XVG, XVG_BAD_NCOL, XVG_BZ2
+from MDAnalysisTests.datafiles import (AUX_XVG, XVG_BAD_NCOL, XVG_BZ2,
+                                       COORDINATES_XTC, COORDINATES_TOPOLOGY)
 from MDAnalysisTests.auxiliary.base import (BaseAuxReaderTest, BaseAuxReference)
 from MDAnalysis.auxiliary.XVG import XVGStep
 
@@ -83,6 +84,13 @@ class TestXVGReader(BaseAuxReaderTest):
         return XVGReference()
 
     @staticmethod
+    @pytest.fixture
+    def ref_universe(ref):
+        u = mda.Universe(COORDINATES_TOPOLOGY, COORDINATES_XTC)
+        u.trajectory.add_auxiliary('test', ref.testdata)
+        return u
+
+    @staticmethod
     @pytest.fixture()
     def reader(ref):
         return ref.reader(
@@ -126,6 +134,13 @@ class TestXVGFileReader(TestXVGReader):
     @pytest.fixture()
     def ref():
         return XVGFileReference()
+
+    @staticmethod
+    @pytest.fixture
+    def ref_universe(ref):
+        u = mda.Universe(COORDINATES_TOPOLOGY, COORDINATES_XTC)
+        u.trajectory.add_auxiliary('test', ref.testdata)
+        return u
 
     @staticmethod
     @pytest.fixture()
